fixed the image not showing up after editing an event

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -14,6 +14,11 @@ a {
   color: black;
 }
 
+/* body */
+body{
+  min-height: 100vh;
+}
+
 /* header */
 header {
   background-color: #082e38;
@@ -111,14 +116,22 @@ main {
 main p {
   margin-top: 50px;
 }
+.content{
+  padding-left: 1rem;
+  padding-top: 1rem;
+}
+
+h4{
+  padding-left: 1rem;
+}
 
 /* footer */
 footer {
-  display: flex;
+  display: flex; 
   flex-direction: row;
-  /* position: fixed; */
-  /* bottom: 0;
-    left: 0; */
+  /* position: absolute; 
+  bottom: 0;
+  left: 0; */
   background-color: #082e38;
   text-align: center;
   /* padding-top: 0.5rem; */
@@ -126,7 +139,10 @@ footer {
   /* margin-top: 1rem; */
   width: 100vw;
   height: 50px;
+
 }
+
+
 footer p {
   color: #eaede8;
   margin-left: 1rem;
